--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <h2>Procedural Generation</h2>
-    <canvas></canvas>
+    <h3>Random Noise</h3>
+    <canvas id="random"></canvas>
+    <h3>Perlin Noise</h3>
+    <canvas id="perlin"></canvas>
 
     <script src="app.js"></script>
+
 </body>
 </html>
