Added simple 2d noise

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <canvas id="random"></canvas>
     <h3>Perlin Noise</h3>
     <canvas id="perlin"></canvas>
+    <h3>2D Perlin Noise</h3>
+    <canvas id="perlinoise"></canvas>
 
     <script src="app.js"></script>
 
